# splr

./: .gitignore  README.md  main.py  prepare-env.sh  pyproject.toml
configs/: cfg_pretrain.yaml  cfg_pretrain_tool.yaml
configs/arch/: splr.yaml  splr_hrm_gpt.yaml  splr_hrm_gpt_dis.yaml  splr_hrm_gpt_zl.yaml  splr_trm_gpt.yaml  splr_trm_gpt_dis.yaml  splr_trm_gpt_zl.yaml  splr_trm_qwen.yaml  splr_trm_qwen_dis.yaml  splr_trm_qwen_zl.yaml
configs/eval/: halt.yaml  halt_2.yaml  halt_2_tool.yaml  halt_4.yaml  halt_4_tool.yaml  halt_8.yaml  halt_8_tool.yaml  halt_tool.yaml  no_halt_16.yaml  no_halt_16_tool.yaml  no_halt_2.yaml  no_halt_2_tool.yaml  no_halt_4.yaml  no_halt_4_tool.yaml  no_halt_8.yaml  no_halt_8_tool.yaml
datasets/: MultiArith.json  SVAMP.json  aime2024.json  aime2025.json  amc23.json  gsm-hard.json  math500.json
scripts/data_preprocessing/: check_token_lengths.py  gsm.bash  math_datasets.bash  prosqa.bash  validate_gsm8k_steps.py
scripts/pretrain_gpt2/: eval.py  evaluate-cpu.sh  evaluate.sh  make_react.py  pretrain.sh  react_eval-cpu.sh  react_eval.py  react_eval.sh  run_clm.py  strip_cot.py
scripts/train/: train_react.sh  train_think.sh
src/splr/: data_generator.py
src/splr/core/: eval.py  optimizers.py  trainer.py
src/splr/core/adam_atan2_csrc/: adam_atan2.cu
src/splr/core/models/: __init__.py  configuration_splr.py  modeling_splr.py
src/splr/core/samplers/: splr.py
src/splr/core/tokenizers/gpt2/: tokenizer.json  tokenizer_config.json  vocab.json
src/splr/core/tokenizers/qwen/: tokenizer_config.json
src/splr/data/: __init__.py  gsm8k.py  gsm8k_tool.py
src/splr/tasks/: __init__.py  think.py  tool.py
